packages/astro/e2e/fixtures/errors/src/components/VueSyntaxError.vue
<p>This needs a template</p>
<p>But alas, this is lacking</p>
<p>Look 5 syllables</p>
